Refactor services & repository